# virus

./: .gitignore  CNAME  Cargo.toml  LICENSE  LICENSE.md  LICENSE.txt  README.md  app.py  futures.md
.cargo/: config.toml
.github/workflows/: create-upload.yml  jfrog-sast.yml  release.yml  rust.yml
src/: app.rc  build.rs  core.rs  detect.rs  lib.rs  main.rs  sys.rs
