[package]
name = "virus"
version = "1.0.7"
edition = "2021"
# build = "build.rs"

[dependencies]
base64 = "0.22.1"
raw-cpuid = "11.5.0"
reqwest = { version = "0.12.15", features = ["blocking"] }
sys-info = "0.9.1"
winapi = { version = "0.3.0", features = ["processthreadsapi", "handleapi", "securitybaseapi", "winnt", "wincon", "winuser", "everything"] }
ntapi = "0.4"

[profile.release]
panic = 'abort'

#[package.metadata.cargo-xbuild]
#rustflags = ["-C", "link-args=app.res"]

# [build]
# target = "x86_64-pc-windows-gnu"

[target.x86_64-pc-windows-gnu]
linker = "x86_64-w64-mingw32-gcc"